# art-semantic-search

./: .gitignore  README.md  README_en.md  main.py  pyproject.toml
src/config/: __init__.py  config.py
src/data/: dataset.py
src/model/: __init__.py  clip_search.py
