[project]
name = "art-semantic-search"
version = "0.1.0"
description = "Explore artistic styles in the WikiArt dataset using multimodal embeddings and computed attributes. This repository demonstrates image similarity search, semantic search, clustering, and visualization with CLIP embeddings and UMAP, alongside uniqueness and image quality analysis, all powered by FiftyOne and 🤗 Transformers."
authors = [
    {name = "0121ienT",email = "phamdt203@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers (>=4.49.0,<5.0.0)",
    "fiftyone (>=1.3.2,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "hf-transfer (>=0.1.9,<0.2.0)",
    "torchvision (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
